[gd_scene load_steps=21 format=3 uid="uid://8bbjksyw0lcg"]

[ext_resource type="Script" uid="uid://iwfpdtvl83b4" path="res://Assets/Scripts/Plants/sunpetal.gd" id="1_ojlaq"]
[ext_resource type="Texture2D" uid="uid://b51xt18562q15" path="res://Assets/Sprites/sunPetal_Day.png" id="2_53p8o"]
[ext_resource type="Texture2D" uid="uid://bdj2g65c0xes" path="res://Assets/Sprites/NIGHT_Sunpetal-sheet.png" id="3_53p8o"]
[ext_resource type="PackedScene" uid="uid://mlla82ft7ar" path="res://Assets/Scenes/hpBar.tscn" id="3_c0i50"]
[ext_resource type="Texture2D" uid="uid://bclmh2uqk68g6" path="res://Assets/Sprites/GrowthSprites/sunpetalGrowthStagesSpritesheet.png" id="3_teqe6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_c0i50"]
atlas = ExtResource("2_53p8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_teqe6"]
atlas = ExtResource("2_53p8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0202v"]
atlas = ExtResource("2_53p8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g3beu"]
atlas = ExtResource("2_53p8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl8wm"]
atlas = ExtResource("3_teqe6")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhqky"]
atlas = ExtResource("3_teqe6")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gissv"]
atlas = ExtResource("3_teqe6")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iodfe"]
atlas = ExtResource("3_53p8o")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgohb"]
atlas = ExtResource("3_53p8o")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3eu1v"]
atlas = ExtResource("3_53p8o")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksm2u"]
atlas = ExtResource("3_53p8o")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_yl8wm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0i50")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teqe6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0202v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g3beu")
}],
"loop": true,
"name": &"dayIdle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl8wm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhqky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gissv")
}],
"loop": true,
"name": &"growth",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iodfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgohb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3eu1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksm2u")
}],
"loop": true,
"name": &"nightIdle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4edj2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_78iwd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sntse"]
size = Vector2(53, 63)

[node name="Sunpetal" type="CharacterBody2D" node_paths=PackedStringArray("attackRangeCollisionBox", "navigationAgent2d", "sprite") groups=["Plant"]]
texture_filter = 1
collision_layer = 4
collision_mask = 16
script = ExtResource("1_ojlaq")
atkDamage = 15
maxHealth = 100
atkCoolDownInSeconds = 1.5
visionRadius = 250.0
atkRange = 100.0
speed = 200.0
attackRangeCollisionBox = NodePath("AttackArea/Range")
navigationAgent2d = NodePath("NavigationAgent2D")
sprite = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_yl8wm")
animation = &"growth"

[node name="VisionArea" type="Area2D" parent="."]
collision_mask = 32

[node name="Radius" type="CollisionShape2D" parent="VisionArea"]
shape = SubResource("CircleShape2D_4edj2")

[node name="AttackArea" type="Area2D" parent="."]
collision_mask = 4

[node name="Range" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_78iwd")
debug_color = Color(0.49411765, 0, 0.05882353, 0.50980395)

[node name="HitBox" type="CollisionShape2D" parent="."]
position = Vector2(2.5, -0.5)
shape = SubResource("RectangleShape2D_sntse")
debug_color = Color(0.0032314504, 0.6454529, 0.26474586, 0.41960785)

[node name="NavTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="HpBar" parent="." instance=ExtResource("3_c0i50")]
offset_left = -40.0
offset_top = -45.0
offset_right = 39.0
offset_bottom = -38.0

[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_exited" from="VisionArea" to="." method="_on_vision_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="timeout" from="NavTimer" to="." method="_on_nav_timer_timeout"]
